[gd_scene load_steps=4 format=3 uid="uid://c0wvu1t7h6xqr"]

[ext_resource type="Script" path="res://test/test_scene.gd" id="1_3x72q"]
[ext_resource type="Script" path="res://src/autostart_manager.gd" id="2_autostart"]
[ext_resource type="Script" path="res://test/landmark_drawer.gd" id="3_landmark"]

[node name="TestScene" type="Node2D"]
script = ExtResource("1_3x72q")

[node name="AutoStartManager" type="Node" parent="."]
script = ExtResource("2_autostart")
server_port = 8080

[node name="StatusLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 620.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 24
text = "Initializing..."

[node name="InfoLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 560.0
offset_right = 400.0
offset_bottom = 700.0
theme_override_font_sizes/font_size = 14

[node name="CameraDisplay" type="TextureRect" parent="."]
offset_left = 20.0
offset_top = 80.0
offset_right = 660.0
offset_bottom = 520.0
expand_mode = 1
stretch_mode = 5

[node name="LandmarkDrawer" type="Control" parent="CameraDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_landmark")

[node name="RunTestsButton" type="Button" parent="."]
offset_left = 420.0
offset_top = 560.0
offset_right = 620.0
offset_bottom = 600.0
theme_override_font_sizes/font_size = 18
text = "Run Tests"
